[codex] Harden control plane, dry-run, and SDK contracts (#1005)
* chore: consolidate runtime and documentation updates

* chore: consolidate local verification and cleanup updates

* feat: harden control plane dry-run and SDK contracts

* docs: refresh Java readability inventory

* refactor: separate benchmark SQL from shell

* refactor: centralize new empty checks

* fix: preserve SDK register compatibility under PMD

---------

Co-authored-by: Dengchao <tfys9544@gmail.com>